--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,8 @@ name = "htmx-demos"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
 
 [dependencies]
-axum = "0.4.5"
-tokio = { version = "1.0", features = ["full"] }
-tracing = "0.1.30"
-tracing-subscriber = "0.3.7"
-
-[features]
+askama = "0.11.0"
+rouille = "3.5.0"
